@@ -36,15 +36,15 @@ master_doc = 'index'
 
 # General substitutions.
 project = 'django-treebeard'
-copyright = '2008-2009, Gustavo Picon'
+copyright = '2008-2010, Gustavo Picon'
 
 # The default replacements for |version| and |release|, also used in various
 # other places throughout the built documents.
 #
 # The short X.Y version.
-version = '1.52'
+version = '1.53a'
 # The full version, including alpha/beta/rc tags.
-release = '1.52'
+release = '1.53a'
 
 # There are two options for replacing |today|: either, you set today to some
 # non-false value, then it is used:
