@@ -1,4 +1,11 @@
 
+Release tip (??? ??, 2010)
+---------------------------
+
+* Added raw id fields support in the admin
+* Fixed setup.py to make it work in 2.4 again
+
+
 Release 1.52 (Dec 18, 2009)
 ---------------------------
 
